--- a/content/data/config.json
+++ b/content/data/config.json
@@ -1,7 +1,7 @@
 {
     "title": "Stackbit Agency Theme",
     "path_prefix": "/",
-    "color_scheme": "dark",
+    "color_scheme": "light",
     "accent_color": "green",
     "base_font": "fraunces",
     "header": {
